Fix background color Header Menu on mobile

--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@
 }
 
 .header_menu {
+  background-color: #FFF;
   display: flex;
   flex-direction: column;
   gap: 35px;
